# clline-python-sample

./: .clineignore  .clinerules  .gitignore  LICENSE  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.dev.yml  postCreateCommand.sh
data/tsv/: user_action.tsv
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
src/cline-sample/domain/models/: user_action.py
src/cline-sample/infrastructure/db/: __init__.py  sqlite_user_action.py
src/cline-sample/infrastructure/file/: user_action_reader.py
src/cline_sample/: main.py
src/cline_sample/domain/models/: user_action.py
src/cline_sample/infrastructure/db/: sqlite_user_action.py
src/cline_sample/infrastructure/file/: __init__.py  user_action_reader.py
src/cline_sample/infrastructure/spark/: spark_util.py
src/cline_sample/usecase/: get_latest_user_actions.py
tests/cline_sample/usecase/: schema.py  test_get_latest_user_actions.py
tool/: create_sample_data.py  write_tsv_to_sqlite.py
